# ducttape-editor

./: BUILDING.txt  Button.qml  Buttonbar.qml  CMakeLists.txt  Editor.qmlproject  README.md  Slider.qml  TabBar.qml  Toolbar.qml  main.qml
editor-ui/: 4editor.ui
qml/: Button.qml  Buttonbar.qml  Editor.qmlproject  HSlider.qml  TabBar.qml  VSlider.qml  main.qml
res/: resources.qrc
res/icons/: .directory
res/textures/: .directory
src/: State.cpp  State.hpp  ducttapeeditorstate.hpp  ducttapewidget.cpp  ducttapewidget.hpp  ducttapewidgetgame.cpp  ducttapewidgetgame.hpp  main.cpp
